--- a/nav.css
+++ b/nav.css
@@ -1,13 +1,38 @@
-nav ul {
+nav > ul {
+    display: flex; 
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    background-color: #8bc4ce; 
 }
 
 nav ul li {
-    display: inline-block;
-    margin-right: 40px;
+    position: relative;
     padding: 10px;
     border: 1px solid #000;
 }
 
+nav a {
+    display: block;
+    padding: 10px;
+    color: white;
+    text-decoration: none; 
+}
+
+.dropdowncontent {
+    display: none;
+    position: absolute;
+    top: 100%;
+    background-color: #8bc4ce;
+    min-width: 160px;
+}
+
+.dropdowncontent li a {
+    color: black; 
+    padding: 10px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown:hover .dropdowncontent {
+    display: block;
+}
