--- a/style.css
+++ b/style.css
@@ -1,31 +1,160 @@
-h1 {
-    color: #0053ecec; 
-}
-
 p:first-child::first-letter {
     font-size: 200%;
     font-weight: bold;
-  }
+}
 
 p {
     text-indent: 20px;
-  }
+    padding: 20px;
+}
 
+  h2 {
+    padding: 10px;
+}
+
+  h1 {
+    padding: 10px;
+}
+
+  h3 {
+    text-align: center;
+}
 p:first-child {
     text-indent: 0;
-  }
+}
 
-
-
+img {
+  padding: 20px;
+  width: 200px;
+  height: auto;
+}
 .resume-link {
     display: inline-block;
-    background-color: #94b9c7; 
+    background-color: #024959; 
     padding: 10px 20px;
     border: 1px solid #000000; 
     margin: 10px;
     color: black; 
+    margin-top: auto;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.headercenter {
+  text-align: center;
+  bottom: 0;
 }
 
 .author {
     text-transform: none;
+}
+
+@media (max-width: 768px) {
+  .container {
+      flex-direction: column;
+  
+  header, .header {
+      font-size: 18px; 
+    }
+  }
+  img {
+        max-width: 100%; 
+        height: auto;
+    }
+
+  p, blockquote, ul, ol {
+      padding: 0 10px; 
+    }
+
+  footer, .footer {
+      font-size: 14px;
+    }
+  #left-column{
+      width:100%;
+    }
+  #right-column{
+    width:100%;
+  }
+}
+
+@media (max-width: 320px) {
+  #container {
+    width:320px;
+}
+}
+.flex-container {
+  display: flex;
+  align-items: center;
+}
+.flex-container img, .flex-container p {
+  margin: 10px;
+  text-align:center;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #F2E3D5;
+  color: #012E40;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  background-color: #024959; 
+}
+
+nav a {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: #F2E3D5;
+  transition: background-color 0.3s ease; 
+}
+
+nav a:hover {
+  background-color: #3CA6A6;
+}
+
+header h1, main h2 {
+  color: #024959; 
+}
+
+footer {
+  width: 100%;
+  background-color: #012E40; 
+  text-align: center;
+  padding: 20px 0;
+  color: #F2E3D5;
+  position: fixed;
+  bottom: 0;
+  align-items: center;
+  display:flex;
+  justify-content: space-between;
+  
+}
+
+footer div {
+  margin: 5px 0;
+  padding: 10px;
+}
+
+main {
+  width: 100%; 
+  margin-left: auto;
+  margin-right: auto;
+}
+.main-content {
+  padding-bottom: 100px;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  margin-top: auto;
+  overflow-y: auto;
+  bottom: 0;
+  overflow: auto;
 }
