--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@ p:first-child::first-letter {
     font-size: 200%;
     font-weight: bold;
 }
+header h1 {
+  font-size: 36px; /* Adjust font size as needed */
+}
+
+.headercenter {
+  text-align: center;
+  bottom: 0;
+}
+
 
 p {
     text-indent: 20px;
@@ -38,11 +47,6 @@ img {
     margin-top: auto;
     text-align: center;
     margin-top: 50px;
-}
-
-.headercenter {
-  text-align: center;
-  bottom: 0;
 }
 
 .author {
@@ -122,6 +126,25 @@ header h1, main h2 {
   color: #024959; 
 }
 
+
+main {
+  width: 100%; 
+  margin-left: auto;
+  margin-right: auto;
+}
+.main-content {
+  padding-bottom: 100px;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  margin-top: auto;
+  overflow-y: auto;
+  bottom: 0;
+  overflow: auto;
+}
+
 footer {
   width: 100%;
   background-color: #012E40; 
@@ -141,20 +164,50 @@ footer div {
   padding: 10px;
 }
 
-main {
-  width: 100%; 
-  margin-left: auto;
-  margin-right: auto;
-}
-.main-content {
-  padding-bottom: 100px;
+@media (min-width: 768px) { /* Tablet */
+  .container {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
-html, body {
-  height: 100%;
-  margin: 0;
-  margin-top: auto;
-  overflow-y: auto;
-  bottom: 0;
-  overflow: auto;
+
+@media (min-width: 992px) { /* Desktop */
+  .container {
+    width: 80%;
+  }
+
+  nav ul li {
+    margin-right: 30px;
+  }
+}
+
+/* Mobile */
+@media (max-width: 767px) {
+  body {
+    font-size: 14px;
+  }
+  img {
+    width: 100%;
+  }
+}
+
+/* Tablet */
+@media (min-width: 768px) and (max-width: 991px) {
+  body {
+    font-size: 16px;
+  }
+  img {
+    width: 80%;
+  }
+}
+
+/* Desktop */
+@media (min-width: 992px) {
+  body {
+    font-size: 18px;
+  }
+  img {
+    width: 60%;
+  }
 }
