--- a/style.css
+++ b/style.css
@@ -248,6 +248,9 @@ footer {
   bottom: 0;
   width: 100%;
   height: 60px;
+  background-image: url('footer-background.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 .footer-left, .footer-center, .footer-contact {
