--- a/style.css
+++ b/style.css
@@ -88,7 +88,15 @@ p {
   text-indent: 20px;
   padding: 20px;
 }
-
+source {
+  width: 300px;
+  height: auto;
+}
+video {
+  width: 450px;
+  height: auto;
+  margin: 20px;
+}
 /* IMAGE */
 img {
   width: 300px;
@@ -237,7 +245,7 @@ body {
 /* Footer Styles */
 footer {
   display: flex;
-  justify-content: space-between; /* Adjust alignment for three sections */
+  justify-content: space-between; 
   align-items: center;
   padding: 10px;
   background-color: #012E40;
@@ -254,12 +262,42 @@ footer {
 }
 
 .footer-left, .footer-center, .footer-contact {
-  flex: 1; /* Allows equal space distribution, can adjust as needed */
+  flex: 1;
   display: flex;
-  justify-content: center; /* Center content, adjust as needed */
+  justify-content: center;
   align-items: center;
 }
 
 .footer-contact div {
-  margin: 0 10px; /* Adds horizontal spacing between contact info items */
+  margin: 0 10px;
+}
+.footer-contact img {
+  transition: transform 0.3s ease;
+}
+
+.footer-contact img:hover {
+  transform: scale(1.1);
+}
+
+/* CONTACT */
+.contact-info {
+  font-family: Arial, sans-serif; 
+  line-height: 1.6; 
+  color: #333; 
+  background-color: #F2E3D5; 
+  padding: 15px;
+  border-radius: 8px; 
+  width: auto; 
+  max-width: 400px; 
+  margin: 0; 
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
+}
+
+.contact-info a {
+  color: #0066cc; 
+  text-decoration: none; 
+}
+
+.contact-info a:hover {
+  text-decoration: underline; 
 }
