--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
   font-family: 'Lato';
   src: url('Lato-Regular.ttf') format('truetype'); 
 }
+
+@font-face {
+  font-family: 'Merriweather';
+  src: url('Merriweather-Regular.ttf') format('truetype'); 
+}
+
 /* Media Print */
 @media print {
   html{
@@ -46,11 +52,6 @@
   }
   }
 
-/* FONTS */
-@font-face {
-  font-family: 'Merriweather';
-  src: url('Merriweather-Regular.ttf') format('truetype'); 
-}
 body {
   font-family: 'Lato', sans-serif;
 }
@@ -60,7 +61,8 @@ header ,h1, h2,h3 {
 
 /* HEADER */
 header h1 {
-  font-size: 36px; 
+  font-size: 36px;
+
 }
 .headercenter {
   text-align: center;
@@ -68,12 +70,21 @@ header h1 {
 }
   h2 {
     padding: 10px;
+    margin-top: 50px; 
+    margin-left:5vh;
+    margin-right:5vh;
 }
   h1 {
     padding: 10px;
+    margin-top: 50px; 
+    margin-left:5vh;
+    margin-right:5vh;
 }
   h3 {
     text-align: center;
+    margin-left:5vh;
+    margin-right:5vh;
+    
 }
 
 /* PARAGRAPH */
@@ -87,20 +98,26 @@ p:first-child::first-letter {
 p {
   text-indent: 20px;
   padding: 20px;
+  margin-left:5vh;
+  margin-right:5vh;
 }
 source {
   width: 300px;
   height: auto;
+
 }
 video {
   width: 450px;
   height: auto;
   margin: 20px;
+  margin-left:5vh;
+  margin-right:5vh;
 }
 /* IMAGE */
 img {
   width: 300px;
   height: auto;
+
 }
 .imgresize {
   width: 30%;
@@ -240,6 +257,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+
 }
 
 /* Footer Styles */
@@ -256,9 +274,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 60px;
-  background-image: url('footer-background.jpg');
-  background-size: cover;
-  background-position: center;
+
 }
 
 .footer-left, .footer-center, .footer-contact {
@@ -294,10 +310,99 @@ footer {
 }
 
 .contact-info a {
-  color: #0066cc; 
+  color: #024959; 
   text-decoration: none; 
 }
 
 .contact-info a:hover {
   text-decoration: underline; 
+}
+
+.form-container {
+  display: flex;
+  justify-content: center; 
+  margin-top: 10vh;
+
+}
+.form-row {
+  display: flex;
+  margin-bottom: 20px;
+  justify-content: space-between;
+
+}
+.form-row label {
+  flex: 1;
+  margin-right: 10px;
+}
+.form-row label:last-child {
+  margin-right: 0;
+}
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+textarea {
+  height: 100px;
+  resize: vertical;
+}
+
+button {
+  padding: 10px 20px;
+  cursor: pointer;
+  display: block; /* Make the button a block element */
+  margin: 0 auto; /* Auto margin on both sides centers the button */
+}
+
+.projects-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px 0;
+  margin-bottom: 10vh;
+}
+
+.project-item {
+  display: flex;
+  align-items: center; /* Vertically center the text and image */
+  margin: 10px;
+  flex-basis: 100%; /* Stacks on small screens */
+}
+
+.project-item img {
+  width: 40%; /* Image takes up 40% of the container */
+  height: auto;
+  margin-right: 20px; /* Space between image and text */
+}
+
+.project-item p {
+  flex: 1; /* Text takes remaining space */
+  text-align: justify;
+}
+
+@media (min-width: 768px) {
+  .project-item {
+      flex-basis: 48%; /* Two items per row on larger screens */
+  }
+
+  .project-item {
+      flex-direction: row; /* Switch to horizontal layout on larger screens */
+      align-items: center; /* Align items vertically in the center */
+      flex-basis: 48%; /* Allow two items per row */
+  }
+
+  .project-item img {
+      width: 40%; /* Adjust width as per design requirements on desktop */
+      height: auto;
+      margin-right: 20px; /* Space between image and text */
+      margin-bottom: 0; /* No bottom margin on larger screens */
+  }
+
+  .project-item p {
+      text-align: justify; /* Justify text for a more formal appearance on desktop */
+      padding: 0;
+  }
 }
