--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* FONTS */
 @font-face {
   font-family: 'Lato';
   src: url('Lato-Regular.ttf') format('truetype'); 
@@ -356,8 +355,8 @@ textarea {
 button {
   padding: 10px 20px;
   cursor: pointer;
-  display: block; /* Make the button a block element */
-  margin: 0 auto; /* Auto margin on both sides centers the button */
+  display: block;
+  margin: 0 auto;
   color: #F2E3D5; 
   background-color: #012E40; 
 }
@@ -372,42 +371,42 @@ button {
 
 .project-item {
   display: flex;
-  align-items: center; /* Vertically center the text and image */
+  align-items: center; 
   margin: 10px;
-  flex-basis: 100%; /* Stacks on small screens */
+  flex-basis: 100%; 
 }
 
 .project-item img {
-  width: 40%; /* Image takes up 40% of the container */
+  width: 40%;
   height: auto;
-  margin-right: 20px; /* Space between image and text */
+  margin-right: 20px;
 }
 
 .project-item p {
-  flex: 1; /* Text takes remaining space */
+  flex: 1; 
   text-align: justify;
 }
 
 @media (min-width: 768px) {
   .project-item {
-      flex-basis: 48%; /* Two items per row on larger screens */
+      flex-basis: 48%;
   }
 
   .project-item {
-      flex-direction: row; /* Switch to horizontal layout on larger screens */
-      align-items: center; /* Align items vertically in the center */
-      flex-basis: 48%; /* Allow two items per row */
+      flex-direction: row; 
+      align-items: center; 
+      flex-basis: 48%; 
   }
 
   .project-item img {
-      width: 40%; /* Adjust width as per design requirements on desktop */
+      width: 40%; 
       height: auto;
-      margin-right: 20px; /* Space between image and text */
-      margin-bottom: 0; /* No bottom margin on larger screens */
+      margin-right: 20px;
+      margin-bottom: 0; 
   }
 
   .project-item p {
-      text-align: justify; /* Justify text for a more formal appearance on desktop */
+      text-align: justify;
       padding: 0;
   }
 }
