--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ source {
 
 }
 video {
-  width: 450px;
+  width: 30vh;
   height: auto;
   margin: 20px;
   margin-left:5vh;
@@ -169,13 +169,66 @@ img {
   footer, .footer {
       font-size: 14px;
     }
+    .headshot, video {
+      width: 60%;
+      max-height: 100px;
+  }
+  .contact-info {
+    width: 50%; 
+  }
+ .footer-contact {
+    flex-direction: column;
+    align-items: start;  
+    text-align: left;    
+    margin-bottom: 10px; 
+}
+
+.footer-contact img, .footer-contact a, .footer-contact span {
+    margin-right: 0;   
+    margin-bottom: 5px;    
+}
+
+.footer-contact {
+    align-items: center;   
+}
+.footer-contact img{
+  display:none;
+}
+
+    
 }
 
 @media (max-width: 320px) {
   #container {
     width:320px;
+  }
+  .headshot, video {
+      width: 90%; 
+      max-height: 100px; 
+  }
+  .contact-info {
+    width: 50%; 
+  }
+  .footer-left, .footer-center, .footer-contact {
+    flex-direction: column;
+    text-align: left;     
+    margin-bottom: 10px;   
 }
+.footer-contact img{
+  display:none;
 }
+
+.footer-contact img, .footer-contact a, .footer-contact span {
+    margin-right: 0;       
+
+}
+
+.footer-contact {
+    align-items: center;   
+}
+
+}
+
 .flex-container {
   display: flex;
   align-items: center;
@@ -215,13 +268,16 @@ html, body {
   bottom: 0;
   overflow: auto;
 }
+
 @media (min-width: 768px) { /* Tablet */
   .container {
     flex-direction: row;
     justify-content: space-between;
   }
 }
-
+html {
+  scroll-behavior: smooth;
+}
 /* Mobile */
 @media (max-width: 390px) {
   body {
@@ -230,32 +286,38 @@ html, body {
   img {
     width: 100%;
   }
+
+  footer {
+    flex-direction: column; 
+    text-align: center; 
+    font-size: 12;
+    width: 100%; 
+    height: auto;
+  }
+
+  .footer-left, .footer-center, .footer-contact {
+    flex: none; 
+    width: 100%; 
+    height: auto;
+
+  }
+  .main-content{
+    margin-bottom: 10vh;
+  }
+  
+
 }
 
-/* Tablet */
-@media (min-width: 768px) and (max-width: 991px) {
-  body {
-    font-size: 16px;
-  }
-  img {
-    width: 80%;
-  }
-}
-/* Desktop */
-@media (min-width: 768px) {
-  body {
-    font-size: 18px;
-  }
-  img {
-    width: 60%;
-  }
-}
+
+
 
 /* General Styles */
 html, body {
   height: 100%;
   margin: 0;
   box-sizing: border-box;
+  overflow-y: auto;
+  overflow-x: auto;
 }
 
 body {
@@ -303,7 +365,7 @@ footer {
 }
 
 .footer-contact div, .footer-contact a, .footer-contact span {
-  margin: 0 10px; /* Consistent spacing between contact items */
+  margin: 0 10px; 
 }
 
 .footer-contact img {
@@ -342,35 +404,47 @@ footer {
 
 .form-container {
   display: flex;
-  justify-content: center; 
-  margin-top: 10vh;
-
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10vh; 
+  margin-bottom: 10vh; 
+  flex-grow: 1; 
+  width: 100%; 
 }
-/*FORM*/
+
+/* General Form Styles */
 .form-row {
   display: flex;
-  margin-bottom: 20px;
+  flex-wrap: wrap;
   justify-content: space-between;
+  width: 100%;
+  flex-grow:1;
 
 }
-.form-row label {
-  flex: 1;
-  margin-right: 10px;
+
+.form-field {
+  flex: 1 1 48%;
+  padding: 10px; 
+  margin-bottom: 20px; 
 }
-.form-row label:last-child {
-  margin-right: 0;
+
+.form-field label {
+  display: block;
 }
+
 input[type="text"],
 input[type="email"],
 textarea {
   width: 100%;
-  padding: 8px;
-  box-sizing: border-box;
+  padding: 8px; 
+  margin: 5px 0; 
+  box-sizing: border-box; 
 }
 
 textarea {
   height: 100px;
-  resize: vertical;
+  resize: none;
+  
 }
 
 button {
@@ -392,9 +466,10 @@ button {
 
 .project-item {
   display: flex;
-  align-items: center; 
-  margin: 10px;
-  flex-basis: 100%; 
+  align-items: center;
+  justify-content: flex-start;
+  width: 48%; 
+  margin-bottom: 20px;
 }
 
 .project-item img {
@@ -407,20 +482,29 @@ button {
   flex: 1; 
   text-align: justify;
 }
+.content-wrap {
+  width: 100%;   
+  padding: 10px;  
+  box-sizing: border-box; 
+  overflow: hidden; 
+}
 
-@media (min-width: 768px) {
+
+
+@media (max-width: 768px) {
   .project-item {
       flex-basis: 48%;
+
   }
 
   .project-item {
-      flex-direction: row; 
+      flex-direction: column; 
       align-items: center; 
       flex-basis: 48%; 
   }
 
   .project-item img {
-      width: 40%; 
+      width: 100%; 
       height: auto;
       margin-right: 20px;
       margin-bottom: 0; 
@@ -429,5 +513,162 @@ button {
   .project-item p {
       text-align: justify;
       padding: 0;
+
   }
+}
+
+@media (max-width: 368px) {
+  .project-item {
+      flex-basis: 48%;
+      flex: 1; 
+  }
+
+  .project-item {
+      flex-direction: column; 
+      align-items: center; 
+      flex-basis: 48%; 
+      flex: 1; 
+  }
+
+  .project-item img {
+      width: 100%; 
+      height: auto;
+      margin-right: 20px;
+      margin-bottom: 0; 
+  }
+
+  .project-item p {
+      text-align: justify;
+      padding: 0;
+      flex: 1; 
+  }
+  .content-wrap {
+    width: 100%;
+    height: auto;
+  }
+  thead {
+    display: none;
+}
+
+tbody, td, tr {
+    display: block;
+    width: 100%;
+    
+}
+
+tr {
+    margin-bottom: 15px;
+}
+
+td {
+    text-align: right;
+    padding-left: 50%;
+    text-align: right;
+    position: relative;
+}
+
+td:before {
+    content: attr(data-label);
+    position: absolute;
+    left: 10px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+    text-align: left;
+    font-weight: bold;
+    
+}
+.table-container {
+  overflow: auto;
+  margin-bottom: 10vh;
+}
+}
+
+.table-container {
+  overflow-x: auto;
+  margin: 20px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+.table-container {
+  overflow: auto;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  font-family: 'Lato', sans-serif;
+  color: #333;
+  margin-bottom: 10vh;
+}
+
+th, td {
+  text-align: left;
+  padding: 12px;
+  border-bottom: 1px solid #ccc;
+}
+
+thead {
+  background-color: #3A5F73;
+  color: #ffffff;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #f9f9f9;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #ecf0f1;
+}
+
+tbody tr:hover {
+  background-color: #bdc3c7;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+figcaption {
+  padding: 10px;
+  background-color: #012E40;
+  color: white;
+  text-align: center;
+  font-size: 1.2em;
+}
+
+@media (max-width: 768px) {
+  thead {
+      display: none;
+  }
+
+  tbody, td, tr {
+      display: block;
+      width: 100%;
+      
+  }
+
+  tr {
+      margin-bottom: 15px;
+  }
+
+  td {
+      text-align: right;
+      padding-left: 50%;
+      text-align: right;
+      position: relative;
+  }
+
+  td:before {
+      content: attr(data-label);
+      position: absolute;
+      left: 10px;
+      width: 45%;
+      padding-right: 10px;
+      text-align: left;
+      font-weight: bold;
+      
+  }
+  .table-container {
+    overflow: auto;
+
+  }
+
 }
