--- a/style.css
+++ b/style.css
@@ -227,6 +227,7 @@ footer {
   width: 100%;
   height: 60px;
   flex-shrink: 0;
+  margin-bottom: 10vh;
 }
 
 .footer-left, .footer-center, .footer-contact {
